# canny_edge_my_face

./: README.md  Useful_link
src/canny_edge/: CMakeLists.txt  package.xml
src/canny_edge/launch/: Canny_Edge.launch  canny_edge_detector.launch
src/canny_edge/src/: canny_edge_detection.cpp
src/cv_camera/: CMakeLists.txt  CMakeLists.txt~
src/cv_camera/launch/: camera_bringup.launch  camera_bringup.launch~
src/face_detection/: CMakeLists.txt  package.xml
src/face_detection/launch/: face_detection.launch
src/face_detection/src/: face_detection.cpp
